--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "resend": "^4.1.2",
     "tailwindcss": "^4.0.9",
     "validator": "^13.12.0"
   },
